[gd_scene load_steps=46 format=2]

[ext_resource path="res://Player.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Camera.gd" type="Script" id=3]
[ext_resource path="res://ShadowBody.gd" type="Script" id=4]

[sub_resource type="Animation" id=2]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowBody/Shadow:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump_loop"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowBody/Shadow:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Land"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "finish_jump"
}, {
"args": [  ],
"method": "finish_landing"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Jump" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ShadowBody/Shadow:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Punch"
length = 0.48
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.32, 0.48 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ null ],
"method": "damage"
}, {
"args": [  ],
"method": "finish_attack"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack1" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ShadowBody/Shadow:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Punch2"
length = 0.64
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack2" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowBody/Shadow:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack2" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.32, 0.56, 0.64 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ null ],
"method": "damage"
}, {
"args": [ null ],
"method": "damage"
}, {
"args": [  ],
"method": "finish_attack_2"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "Punch3"
length = 0.64
step = 0.08
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowBody/Shadow:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack3" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32, 0.4, 0.48, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("PlayerSprite")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}
tracks/5/type = "method"
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.48, 0.64 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "AOE"
}, {
"args": [  ],
"method": "finish_attack_3"
} ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../ShadowBody/Shadow:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "run_left"
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ShadowBody/Shadow:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../ShadowBody/Shadow:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10.325, 8.324 ), Vector2( 10.325, 8.324 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../ShadowBody/ShadowCollision:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10.4257, 24 ), Vector2( 10.4257, 24 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("GroundDetector/CollisionShape2D:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1.931, 22.01 ), Vector2( 1.931, 22.01 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "run_right"
length = 0.9
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../ShadowBody/Shadow:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../ShadowBody/Shadow:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../ShadowBody/Shadow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CollisionShape2D:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -8.4731, 8.32445 ), Vector2( -8.4731, 8.32445 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("GroundDetector/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -2.783, 22.01 ), Vector2( -2.783, 22.01 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../ShadowBody/ShadowCollision:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -11.0326, 24 ), Vector2( -11.0326, 24 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Jump_loop"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Land"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Punch"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Punch2"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Punch3"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "run_left"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "run_right"

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=33]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=34]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachine" id=38]
states/Jump/node = SubResource( 11 )
states/Jump/position = Vector2( 251, 39 )
states/Jump_loop/node = SubResource( 12 )
states/Jump_loop/position = Vector2( 405, -27 )
states/Land/node = SubResource( 13 )
states/Land/position = Vector2( 604, -39 )
states/Punch/node = SubResource( 14 )
states/Punch/position = Vector2( 380, 218 )
states/Punch2/node = SubResource( 15 )
states/Punch2/position = Vector2( 562, 239 )
states/Punch3/node = SubResource( 16 )
states/Punch3/position = Vector2( 738, 191 )
states/idle/node = SubResource( 17 )
states/idle/position = Vector2( 466, 147 )
states/run_left/node = SubResource( 18 )
states/run_left/position = Vector2( 190, 147 )
states/run_right/node = SubResource( 19 )
states/run_right/position = Vector2( 664, 77 )
transitions = [ "run_right", "idle", SubResource( 20 ), "run_left", "idle", SubResource( 21 ), "idle", "run_left", SubResource( 22 ), "idle", "run_right", SubResource( 23 ), "idle", "Punch", SubResource( 24 ), "Punch", "idle", SubResource( 25 ), "Punch", "Punch2", SubResource( 26 ), "Punch2", "idle", SubResource( 27 ), "Punch2", "Punch3", SubResource( 28 ), "Punch3", "idle", SubResource( 29 ), "idle", "Jump", SubResource( 30 ), "Jump", "Jump_loop", SubResource( 31 ), "Jump_loop", "Land", SubResource( 32 ), "Land", "run_right", SubResource( 33 ), "Land", "idle", SubResource( 34 ), "Land", "run_left", SubResource( 35 ), "run_left", "Jump", SubResource( 36 ), "run_right", "Jump", SubResource( 37 ) ]
start_node = "idle"
graph_offset = Vector2( -75, -68 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=39]

[sub_resource type="RectangleShape2D" id=40]
extents = Vector2( 0.457962, 6.76149 )

[sub_resource type="CapsuleShape2D" id=42]
radius = 1.44348
height = 12.5063

[sub_resource type="RectangleShape2D" id=41]
extents = Vector2( 8.43083, 0.232681 )

[node name="PlayerNode" type="Node2D"]
position = Vector2( 258.222, 68.2903 )
scale = Vector2( 1.2, 1.2 )

[node name="PlayerBody" type="KinematicBody2D" parent="."]
collision_mask = 2
script = ExtResource( 2 )

[node name="PlayerSprite" type="AnimatedSprite" parent="PlayerBody"]
frames = ExtResource( 1 )
animation = "Idle"
frame = 2

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="PlayerBody"]
position = Vector2( -8.4731, 8.32445 )
polygon = PoolVector2Array( -1.66388, 15.1265, 4.40604, 9.55209, 4.80351, -7.11641, -1.60902, -16.9886, -8.91672, -7.3424, -8.35318, 10.3573, -1.72583, 15.0646 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerBody"]
anims/Jump = SubResource( 2 )
anims/Jump_loop = SubResource( 3 )
anims/Land = SubResource( 4 )
anims/Punch = SubResource( 5 )
anims/Punch2 = SubResource( 6 )
anims/Punch3 = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/run_left = SubResource( 9 )
anims/run_right = SubResource( 10 )

[node name="AnimationTree" type="AnimationTree" parent="PlayerBody"]
tree_root = SubResource( 38 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 39 )

[node name="GroundDetector" type="Area2D" parent="PlayerBody"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody/GroundDetector"]
position = Vector2( -2.783, 22.01 )
shape = SubResource( 40 )

[node name="Range" type="Area2D" parent="PlayerBody"]
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBody/Range"]
position = Vector2( 0, 3.40747 )
rotation = 1.57079
shape = SubResource( 42 )

[node name="Anchor" type="Position2D" parent="."]
script = ExtResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Anchor"]
current = true
process_mode = 0
limit_left = 0
limit_bottom = 195

[node name="ShadowBody" type="KinematicBody2D" parent="."]
collision_mask = 2
script = ExtResource( 4 )

[node name="Shadow" type="AnimatedSprite" parent="ShadowBody"]
modulate = Color( 0, 0, 0, 0.160784 )
position = Vector2( -0.017395, 30.8314 )
rotation = 3.14159
scale = Vector2( 1, 0.288304 )
frames = ExtResource( 1 )
animation = "Idle"
frame = 2
flip_h = true

[node name="ShadowCollision" type="CollisionShape2D" parent="ShadowBody"]
position = Vector2( -11.0326, 24 )
shape = SubResource( 41 )

[connection signal="body_entered" from="PlayerBody/GroundDetector" to="PlayerBody" method="_on_GroundDetector_body_entered"]
[connection signal="body_entered" from="PlayerBody/Range" to="PlayerBody" method="_on_Range_body_entered"]
[connection signal="body_exited" from="PlayerBody/Range" to="PlayerBody" method="_on_Range_body_exited"]
